update env file

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GMAPS_API=AIzaSyAMhHl8FhvbJHfwpf653P4kv9tnB4PtEPQ
 INSTAGRAM_USER_ID=7174789
+INSTAGRAM_ACCESS_TOKEN=7174789.6d34b5d.cc1b60ff857c41ce876a98c482e99245
