Updates to launch on Heroku

--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ VIMEO_ACCESS_TOKEN=3c8ebd18b2ee4d5a485b268b23353fdf
 
 SECRET_KEY ="sk_test_f2WoZSMfbJ3yiZcHYEYDrKOi"
 PUBLISHABLE_KEY = "pk_test_tr8I0ZKidqfkHNXZTVbgiIuD"
+RACK_ENV=development
+PORT=3000
