--- a/config/database.yml
+++ b/config/database.yml
@@ -18,4 +18,4 @@ production:
   adapter: postgresql
   host: ENV['DATABASE_URL']
   username: Red_Sweater
-  password: <%= ENV['RED_SWEATER_DATABASE_PASSWORD'] %>
+  password: 
