--- a/config/database.yml
+++ b/config/database.yml
@@ -11,11 +11,11 @@ development:
 test:
   <<: *default
   database: Red_Sweater_test
+  url: <%= ENV['DATABASE_URL'] %>
 
 production:
   <<: *default
   database: Red_Sweater_production
   adapter: postgresql
-  host: ENV['DATABASE_URL']
   username: Red_Sweater
-  password: 
+  password:
