Remove port line from Puma.rb based on heroku documentation

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,7 @@
+on_worker_boot do
+  # Valid on Rails 4.1+ using the `config/database.yml` method of setting `pool` size
+  ActiveRecord::Base.establish_connection
+end
 
 default: &default
   adapter: postgresql
